add code in files types: remove code in files types: .js

--- a/content.scss
+++ b/content.scss
@@ -1031,5 +1031,6 @@
   border-left-width: 58px;
   line-height: 15px;
   margin-right: 3px;
-  margin-right: 17px;
+  border-right-width: 89px;
+  margin-top: 77px;
 }
