--- a/content.css
+++ b/content.css
@@ -1015,5 +1015,6 @@
   margin-left: 61px;
   padding-left: 34px;
   margin-left: 23px;
-  padding-left: 40px;
+  padding-left: 79px;
+  border-right-width: 63px;
 }
