add code in files types: .scss,.ftl remove code in files types: .css,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1034,5 +1034,5 @@
   border-right-width: 89px;
   margin-top: 77px;
   margin-left: 60px;
-  margin-bottom: 54px;
+  border-bottom-width: 91px;
 }
