add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1022,5 +1022,5 @@
   padding-right: 7px;
   line-height: 28px;
   border-bottom-width: 66px;
-  border-bottom-width: 83px;
+  padding-left: 2px;
 }
