add code in files types: ,.avsc,.py,.sh,.conf,.txt,.json,.xml,.java,.sql,.git-id,.properties,.html,.js,.hbs,.scss,.css,.map,.svg,.ftl remove code in files types: .avsc,,.py,.sh,.txt,.json,.xml,.java,.sql,.git-id,.html,.js,.hbs,.scss,.css,.ftl,.properties

--- a/content.scss
+++ b/content.scss
@@ -1040,5 +1040,5 @@
   margin-bottom: 33px;
   border-right-width: 76px;
   margin-bottom: 30px;
-  border-bottom-width: 55px;
+  padding-left: 91px;
 }
