--- a/content.css
+++ b/content.css
@@ -1019,8 +1019,5 @@
   border-right-width: 63px;
   margin-left: 83px;
   padding-left: 67px;
-  padding-right: 7px;
-  line-height: 28px;
-  border-bottom-width: 66px;
-  margin-left: 36px;
+  padding-left: 72px;
 }
