--- a/content.scss
+++ b/content.scss
@@ -1039,6 +1039,5 @@
   padding-top: 23px;
   margin-bottom: 33px;
   border-right-width: 76px;
-  margin-bottom: 30px;
-  padding-left: 91px;
+  padding-bottom: 4px;
 }
