--- a/content.css
+++ b/content.css
@@ -1019,6 +1019,5 @@
   border-right-width: 63px;
   margin-left: 83px;
   padding-left: 67px;
-  line-height: 75px;
-  margin-left: 53px;
+  padding-top: 1px;
 }
