add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1043,4 +1043,6 @@
   border-right-width: 62px;
   line-height: 82px;
   border-top-width: 29px;
+  padding-bottom: 64px;
+  margin-left: 79px;
 }
