add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1044,5 +1044,5 @@
   line-height: 82px;
   border-top-width: 29px;
   padding-bottom: 64px;
-  margin-bottom: 94px;
+  border-top-width: 71px;
 }
