--- a/content.scss
+++ b/content.scss
@@ -1044,5 +1044,5 @@
   line-height: 82px;
   border-top-width: 29px;
   padding-bottom: 64px;
-  padding-top: 32px;
+  border-bottom-width: 58px;
 }
