add code in files types: .hbs,.ftl remove code in files types: .ftl

--- a/content.scss
+++ b/content.scss
@@ -1045,5 +1045,6 @@
   border-top-width: 29px;
   padding-bottom: 64px;
   border-bottom-width: 58px;
-  padding-right: 70px;
+  line-height: 24px;
+  margin-top: 43px;
 }
