--- a/content.scss
+++ b/content.scss
@@ -1046,5 +1046,5 @@
   padding-bottom: 64px;
   border-bottom-width: 58px;
   line-height: 24px;
-  margin-top: 43px;
+  border-right-width: 6px;
 }
