--- a/content.css
+++ b/content.css
@@ -1026,5 +1026,5 @@
   margin-bottom: 28px;
   margin-bottom: 60px;
   margin-right: 58px;
-  padding-bottom: 29px;
+  border-right-width: 52px;
 }
