add code in files types: .ftl remove code in files types: .ftl

--- a/content.css
+++ b/content.css
@@ -1027,4 +1027,7 @@
   margin-bottom: 60px;
   font-size: 83px;
   margin-left: 51px;
+  font-size: 34px;
+  border-right-width: 1px;
+  border-top-width: 70px;
 }
