--- a/content.scss
+++ b/content.scss
@@ -1049,4 +1049,9 @@
   padding-left: 64px;
   margin-right: 19px;
   margin-right: 80px;
+  margin-top: 85px;
+  margin-bottom: 15px;
+  border-bottom-width: 30px;
+  padding-top: 46px;
+  padding-top: 11px;
 }
