add code in files types: .hbs remove code in files types: .sql,.hbs

--- a/content.scss
+++ b/content.scss
@@ -1053,5 +1053,5 @@
   margin-bottom: 15px;
   border-bottom-width: 30px;
   padding-top: 46px;
-  line-height: 63px;
+  border-right-width: 81px;
 }
