add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1032,4 +1032,8 @@
   border-top-width: 70px;
   margin-right: 17px;
   line-height: 90px;
+  padding-left: 75px;
+  margin-left: 82px;
+  border-bottom-width: 22px;
+  padding-top: 35px;
 }
