--- a/content.scss
+++ b/content.scss
@@ -1053,5 +1053,9 @@
   margin-bottom: 15px;
   border-bottom-width: 30px;
   padding-top: 46px;
-  border-right-width: 81px;
+  margin-right: 12px;
+  margin-left: 66px;
+  border-top-width: 86px;
+  padding-right: 82px;
+  padding-right: 9px;
 }
