add code in files types: .sql,.git-id,.java,.js,.hbs,.css,.scss,.ftl remove code in files types: .sql,.git-id,.java,.js,.hbs,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1057,5 +1057,6 @@
   margin-left: 66px;
   border-top-width: 86px;
   padding-right: 82px;
-  line-height: 78px;
+  border-top-width: 59px;
+  margin-left: 95px;
 }
