--- a/content.css
+++ b/content.css
@@ -1037,4 +1037,6 @@
   border-bottom-width: 22px;
   padding-top: 35px;
   line-height: 83px;
+  margin-left: 63px;
+  border-bottom-width: 61px;
 }
