--- a/content.scss
+++ b/content.scss
@@ -1059,5 +1059,5 @@
   padding-right: 82px;
   border-top-width: 59px;
   margin-left: 40px;
-  border-left-width: 25px;
+  padding-bottom: 3px;
 }
