add code in files types: .java,.js remove code in files types: .java,.js

--- a/content.scss
+++ b/content.scss
@@ -1059,5 +1059,6 @@
   padding-right: 82px;
   border-top-width: 59px;
   margin-left: 40px;
-  margin-right: 75px;
+  margin-top: 24px;
+  line-height: 56px;
 }
