--- a/content.scss
+++ b/content.scss
@@ -1060,5 +1060,5 @@
   border-top-width: 59px;
   margin-left: 40px;
   margin-top: 24px;
-  border-left-width: 98px;
+  border-right-width: 91px;
 }
