add code in files types: remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1060,5 +1060,7 @@
   border-top-width: 59px;
   margin-left: 40px;
   margin-top: 24px;
-  margin-left: 38px;
+  border-left-width: 71px;
+  padding-top: 32px;
+  margin-left: 97px;
 }
