add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1040,5 +1040,8 @@
   margin-left: 63px;
   margin-top: 67px;
   line-height: 47px;
-  padding-right: 23px;
+  border-bottom-width: 49px;
+  padding-bottom: 56px;
+  border-bottom-width: 58px;
+  padding-left: 91px;
 }
