add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1044,5 +1044,6 @@
   padding-bottom: 56px;
   border-bottom-width: 58px;
   padding-left: 91px;
-  font-size: 73px;
+  border-top-width: 66px;
+  line-height: 20px;
 }
