--- a/content.css
+++ b/content.css
@@ -1045,5 +1045,5 @@
   border-bottom-width: 58px;
   padding-left: 91px;
   border-top-width: 66px;
-  line-height: 3px;
+  padding-right: 66px;
 }
