add code in files types: .java,.properties remove code in files types: .java,.properties

--- a/content.css
+++ b/content.css
@@ -1047,5 +1047,6 @@
   border-top-width: 66px;
   padding-right: 66px;
   margin-top: 6px;
-  margin-top: 77px;
+  margin-left: 29px;
+  padding-right: 32px;
 }
