add code in files types: .hbs,.js,.scss remove code in files types: .hbs,.js

--- a/content.css
+++ b/content.css
@@ -1048,5 +1048,7 @@
   padding-right: 66px;
   margin-top: 6px;
   margin-left: 29px;
-  padding-right: 32px;
+  padding-bottom: 71px;
+  padding-left: 27px;
+  padding-right: 96px;
 }
