--- a/content.scss
+++ b/content.scss
@@ -1062,5 +1062,8 @@
   margin-top: 24px;
   border-left-width: 71px;
   padding-top: 32px;
-  margin-left: 33px;
+  margin-top: 92px;
+  padding-bottom: 48px;
+  margin-top: 22px;
+  border-left-width: 53px;
 }
