add code in files types: .java,.ftl remove code in files types: .java,.ftl

--- a/content.css
+++ b/content.css
@@ -1051,5 +1051,6 @@
   padding-bottom: 71px;
   padding-left: 27px;
   padding-right: 96px;
-  margin-left: 8px;
+  margin-right: 81px;
+  padding-left: 93px;
 }
