--- a/content.scss
+++ b/content.scss
@@ -1066,5 +1066,7 @@
   padding-bottom: 48px;
   margin-top: 22px;
   border-left-width: 53px;
-  line-height: 5px;
+  margin-left: 15px;
+  border-left-width: 65px;
+  border-top-width: 22px;
 }
