--- a/content.scss
+++ b/content.scss
@@ -1069,5 +1069,5 @@
   margin-left: 15px;
   border-left-width: 65px;
   border-top-width: 22px;
-  border-left-width: 25px;
+  padding-right: 63px;
 }
