add code in files types: .java remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1069,5 +1069,5 @@
   margin-left: 15px;
   border-left-width: 65px;
   border-top-width: 22px;
-  line-height: 86px;
+  border-left-width: 10px;
 }
