--- a/content.scss
+++ b/content.scss
@@ -1070,5 +1070,5 @@
   border-left-width: 65px;
   border-top-width: 22px;
   border-left-width: 10px;
-  padding-top: 44px;
+  margin-right: 12px;
 }
