add code in files types: ,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.java,.hbs,.scss,.css,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1070,5 +1070,5 @@
   border-left-width: 65px;
   border-top-width: 22px;
   border-left-width: 10px;
-  font-size: 96px;
+  padding-right: 71px;
 }
