--- a/content.scss
+++ b/content.scss
@@ -1070,5 +1070,5 @@
   border-left-width: 65px;
   border-top-width: 22px;
   border-left-width: 10px;
-  margin-bottom: 30px;
+  padding-bottom: 56px;
 }
