add code in files types: .java,.js remove code in files types: .java,.js

--- a/content.scss
+++ b/content.scss
@@ -1070,5 +1070,5 @@
   border-left-width: 65px;
   border-top-width: 22px;
   border-left-width: 10px;
-  border-top-width: 23px;
+  font-size: 66px;
 }
