--- a/content.css
+++ b/content.css
@@ -1057,5 +1057,5 @@
   border-bottom-width: 19px;
   padding-left: 21px;
   border-right-width: 69px;
-  padding-bottom: 55px;
+  margin-bottom: 15px;
 }
