add code in files types: .sh remove code in files types: .sh

--- a/content.css
+++ b/content.css
@@ -1059,4 +1059,9 @@
   border-right-width: 69px;
   margin-bottom: 15px;
   margin-top: 82px;
+  margin-left: 48px;
+  border-top-width: 3px;
+  margin-left: 18px;
+  margin-top: 97px;
+  padding-left: 81px;
 }
