--- a/content.scss
+++ b/content.scss
@@ -1072,4 +1072,9 @@
   border-left-width: 10px;
   padding-left: 54px;
   line-height: 43px;
+  margin-bottom: 96px;
+  border-top-width: 71px;
+  padding-top: 38px;
+  border-bottom-width: 41px;
+  border-left-width: 41px;
 }
