add code in files types: .scss remove code in files types: .scss

--- a/content.scss
+++ b/content.scss
@@ -1076,5 +1076,5 @@
   border-top-width: 71px;
   padding-top: 38px;
   border-bottom-width: 41px;
-  border-left-width: 41px;
+  padding-right: 6px;
 }
