--- a/content.scss
+++ b/content.scss
@@ -1076,5 +1076,7 @@
   border-top-width: 71px;
   padding-top: 38px;
   border-bottom-width: 41px;
-  line-height: 12px;
+  font-size: 91px;
+  padding-left: 62px;
+  padding-top: 70px;
 }
