add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1065,5 +1065,5 @@
   margin-top: 97px;
   border-bottom-width: 23px;
   margin-bottom: 4px;
-  border-right-width: 76px;
+  padding-top: 47px;
 }
