--- a/content.scss
+++ b/content.scss
@@ -1078,5 +1078,6 @@
   border-bottom-width: 41px;
   font-size: 91px;
   padding-left: 62px;
-  font-size: 15px;
+  padding-right: 79px;
+  margin-bottom: 27px;
 }
