add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1067,4 +1067,8 @@
   margin-bottom: 4px;
   margin-top: 0px;
   border-right-width: 38px;
+  font-size: 53px;
+  margin-right: 70px;
+  padding-top: 54px;
+  padding-left: 81px;
 }
