--- a/content.scss
+++ b/content.scss
@@ -1079,5 +1079,6 @@
   font-size: 91px;
   padding-left: 62px;
   padding-right: 79px;
-  border-bottom-width: 48px;
+  margin-top: 26px;
+  padding-left: 30px;
 }
