add code in files types: remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1081,4 +1081,7 @@
   padding-right: 79px;
   margin-top: 26px;
   border-right-width: 98px;
+  padding-bottom: 52px;
+  margin-bottom: 74px;
+  padding-bottom: 76px;
 }
