add code in files types: .java,.js,.ftl remove code in files types: .java,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1073,5 +1073,10 @@
   line-height: 21px;
   padding-right: 69px;
   font-size: 85px;
-  padding-bottom: 13px;
+  padding-left: 52px;
+  border-right-width: 9px;
+  padding-left: 89px;
+  padding-top: 88px;
+  border-right-width: 1px;
+  line-height: 64px;
 }
