--- a/content.scss
+++ b/content.scss
@@ -1084,5 +1084,7 @@
   padding-bottom: 52px;
   margin-bottom: 74px;
   padding-bottom: 76px;
-  font-size: 88px;
+  padding-right: 96px;
+  padding-top: 63px;
+  margin-bottom: 78px;
 }
