--- a/content.css
+++ b/content.css
@@ -1078,5 +1078,5 @@
   padding-left: 89px;
   padding-top: 88px;
   border-right-width: 1px;
-  margin-right: 26px;
+  border-bottom-width: 44px;
 }
