--- a/content.css
+++ b/content.css
@@ -1078,5 +1078,6 @@
   padding-left: 89px;
   padding-top: 88px;
   border-right-width: 1px;
-  margin-top: 51px;
+  margin-bottom: 89px;
+  padding-right: 16px;
 }
