--- a/content.scss
+++ b/content.scss
@@ -1086,5 +1086,8 @@
   padding-bottom: 76px;
   padding-right: 96px;
   padding-top: 63px;
-  font-size: 55px;
+  padding-top: 96px;
+  margin-bottom: 9px;
+  border-right-width: 1px;
+  margin-right: 15px;
 }
