add code in files types: .sql,.java,.js,.ftl remove code in files types: .js

--- a/content.scss
+++ b/content.scss
@@ -1091,5 +1091,7 @@
   border-right-width: 1px;
   font-size: 74px;
   margin-bottom: 56px;
-  border-bottom-width: 64px;
+  margin-left: 16px;
+  padding-bottom: 99px;
+  border-right-width: 18px;
 }
