--- a/content.css
+++ b/content.css
@@ -1080,5 +1080,5 @@
   border-right-width: 1px;
   margin-bottom: 89px;
   padding-left: 91px;
-  padding-left: 46px;
+  border-top-width: 17px;
 }
