--- a/content.css
+++ b/content.css
@@ -1082,5 +1082,5 @@
   padding-left: 91px;
   border-top-width: 17px;
   padding-bottom: 93px;
-  border-bottom-width: 98px;
+  padding-top: 5px;
 }
