--- a/content.scss
+++ b/content.scss
@@ -1096,5 +1096,5 @@
   margin-right: 95px;
   border-right-width: 57px;
   border-bottom-width: 20px;
-  padding-top: 30px;
+  margin-bottom: 3px;
 }
