add code in files types: .js,.hbs,.scss remove code in files types: .js,.scss

--- a/content.scss
+++ b/content.scss
@@ -1096,5 +1096,5 @@
   margin-right: 95px;
   border-right-width: 57px;
   border-bottom-width: 20px;
-  margin-bottom: 3px;
+  border-right-width: 37px;
 }
