--- a/content.scss
+++ b/content.scss
@@ -1096,5 +1096,5 @@
   margin-right: 95px;
   border-right-width: 57px;
   border-bottom-width: 20px;
-  border-right-width: 37px;
+  border-bottom-width: 37px;
 }
