--- a/content.scss
+++ b/content.scss
@@ -1096,5 +1096,5 @@
   margin-right: 95px;
   border-right-width: 57px;
   border-bottom-width: 20px;
-  border-left-width: 83px;
+  font-size: 97px;
 }
