--- a/content.scss
+++ b/content.scss
@@ -1096,5 +1096,9 @@
   margin-right: 95px;
   border-right-width: 57px;
   border-bottom-width: 20px;
-  font-size: 97px;
+  margin-top: 60px;
+  border-right-width: 76px;
+  padding-left: 49px;
+  margin-top: 2px;
+  margin-bottom: 69px;
 }
