add code in files types: .hbs,.js,.scss remove code in files types: .hbs,.js,.scss

--- a/content.scss
+++ b/content.scss
@@ -1100,5 +1100,5 @@
   border-right-width: 76px;
   padding-left: 49px;
   margin-top: 2px;
-  margin-bottom: 69px;
+  border-bottom-width: 96px;
 }
