add code in files types: .hbs,.scss remove code in files types: .hbs,.scss

--- a/content.css
+++ b/content.css
@@ -1082,5 +1082,8 @@
   padding-left: 91px;
   border-top-width: 17px;
   padding-bottom: 93px;
-  line-height: 45px;
+  border-top-width: 73px;
+  font-size: 73px;
+  margin-right: 32px;
+  border-top-width: 21px;
 }
