--- a/content.scss
+++ b/content.scss
@@ -1100,5 +1100,11 @@
   border-right-width: 76px;
   padding-left: 49px;
   margin-top: 2px;
-  border-bottom-width: 96px;
+  border-bottom-width: 59px;
+  margin-top: 99px;
+  line-height: 15px;
+  border-right-width: 9px;
+  margin-right: 90px;
+  margin-right: 91px;
+  margin-left: 79px;
 }
