add code in files types: .hbs,.svg,.scss,.js,.ftl remove code in files types: .hbs,.scss,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1106,5 +1106,5 @@
   border-right-width: 9px;
   margin-right: 90px;
   margin-right: 91px;
-  margin-right: 77px;
+  border-right-width: 15px;
 }
