add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1108,5 +1108,6 @@
   margin-right: 91px;
   border-right-width: 15px;
   margin-right: 71px;
-  padding-left: 38px;
+  padding-bottom: 87px;
+  margin-bottom: 32px;
 }
