--- a/content.scss
+++ b/content.scss
@@ -1109,5 +1109,5 @@
   border-right-width: 15px;
   margin-right: 71px;
   padding-bottom: 87px;
-  border-right-width: 50px;
+  margin-right: 41px;
 }
