add code in files types: .java remove code in files types: .java,.hbs

--- a/content.scss
+++ b/content.scss
@@ -1109,5 +1109,6 @@
   border-right-width: 15px;
   margin-right: 71px;
   padding-bottom: 87px;
-  margin-right: 41px;
+  margin-left: 92px;
+  margin-bottom: 30px;
 }
