--- a/content.css
+++ b/content.css
@@ -1087,5 +1087,6 @@
   margin-right: 32px;
   padding-left: 62px;
   font-size: 35px;
-  padding-top: 32px;
+  border-bottom-width: 44px;
+  padding-top: 91px;
 }
