add code in files types: ,.sh,.json,.java,.sql,.git-id,.xml,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.sh,.json,.java,.git-id,.sql,.xml,.html,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.css
+++ b/content.css
@@ -1088,5 +1088,5 @@
   padding-left: 62px;
   font-size: 35px;
   border-bottom-width: 44px;
-  border-right-width: 2px;
+  border-top-width: 26px;
 }
