add code in files types: ,.sql,.git-id,.java,.properties,.html,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.sql,.git-id,.java,.properties,.html,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1088,5 +1088,5 @@
   padding-left: 62px;
   font-size: 35px;
   border-bottom-width: 44px;
-  line-height: 57px;
+  border-bottom-width: 42px;
 }
