--- a/content.scss
+++ b/content.scss
@@ -1110,5 +1110,5 @@
   margin-right: 71px;
   padding-bottom: 87px;
   margin-left: 92px;
-  border-bottom-width: 63px;
+  padding-bottom: 41px;
 }
