add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1111,4 +1111,8 @@
   padding-bottom: 87px;
   margin-left: 92px;
   border-right-width: 69px;
+  margin-top: 45px;
+  border-left-width: 73px;
+  border-left-width: 89px;
+  padding-bottom: 56px;
 }
