add code in files types: .xml,.java,.hbs,.css,.map,.scss,.js remove code in files types: .xml,.java,.hbs,.css,.map,.scss,.js

--- a/content.scss
+++ b/content.scss
@@ -1114,5 +1114,5 @@
   margin-top: 45px;
   border-left-width: 73px;
   border-left-width: 89px;
-  padding-bottom: 56px;
+  padding-right: 56px;
 }
