add code in files types: .properties,.java,.js remove code in files types: .properties,.java,.js

--- a/content.scss
+++ b/content.scss
@@ -1116,5 +1116,8 @@
   border-left-width: 89px;
   padding-right: 56px;
   line-height: 3px;
-  border-top-width: 4px;
+  border-top-width: 18px;
+  margin-right: 93px;
+  margin-left: 21px;
+  padding-bottom: 56px;
 }
