--- a/content.css
+++ b/content.css
@@ -1089,5 +1089,6 @@
   font-size: 35px;
   border-bottom-width: 44px;
   padding-bottom: 82px;
-  margin-left: 85px;
+  padding-left: 97px;
+  padding-left: 38px;
 }
