add code in files types: .hbs,.js,.scss,.css,.ftl remove code in files types: .js,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1090,5 +1090,5 @@
   border-bottom-width: 44px;
   padding-bottom: 82px;
   padding-left: 97px;
-  padding-left: 38px;
+  border-top-width: 31px;
 }
