--- a/content.scss
+++ b/content.scss
@@ -1121,5 +1121,7 @@
   margin-left: 21px;
   border-left-width: 80px;
   margin-left: 14px;
-  margin-bottom: 86px;
+  border-bottom-width: 43px;
+  border-bottom-width: 80px;
+  border-top-width: 68px;
 }
