--- a/content.scss
+++ b/content.scss
@@ -1123,5 +1123,5 @@
   margin-left: 14px;
   border-bottom-width: 43px;
   border-bottom-width: 80px;
-  border-top-width: 68px;
+  margin-right: 68px;
 }
