add code in files types: ,.sql,.java,.properties,.xml,.html,.js,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.java,.properties,.hbs,.js,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1123,5 +1123,5 @@
   margin-left: 14px;
   border-bottom-width: 43px;
   border-bottom-width: 80px;
-  margin-right: 68px;
+  margin-top: 40px;
 }
