--- a/content.css
+++ b/content.css
@@ -1090,5 +1090,5 @@
   border-bottom-width: 44px;
   padding-bottom: 82px;
   padding-left: 97px;
-  font-size: 97px;
+  border-right-width: 43px;
 }
