add code in files types: .hbs,.js,.scss remove code in files types: .hbs,.js,.scss

--- a/content.css
+++ b/content.css
@@ -1090,5 +1090,6 @@
   border-bottom-width: 44px;
   padding-bottom: 82px;
   padding-left: 97px;
-  border-right-width: 43px;
+  margin-right: 95px;
+  margin-bottom: 44px;
 }
