--- a/content.scss
+++ b/content.scss
@@ -1125,5 +1125,5 @@
   border-bottom-width: 80px;
   margin-top: 70px;
   border-left-width: 52px;
-  margin-top: 24px;
+  padding-bottom: 73px;
 }
