add code in files types: .hbs,.js,.scss,.css remove code in files types: .hbs,.js,.scss

--- a/content.scss
+++ b/content.scss
@@ -1125,5 +1125,5 @@
   border-bottom-width: 80px;
   margin-top: 70px;
   border-left-width: 52px;
-  padding-bottom: 73px;
+  margin-top: 81px;
 }
