--- a/content.scss
+++ b/content.scss
@@ -1125,5 +1125,6 @@
   border-bottom-width: 80px;
   margin-top: 70px;
   border-left-width: 52px;
-  font-size: 28px;
+  border-left-width: 60px;
+  border-left-width: 76px;
 }
