add code in files types: ,.java,.hbs,.js,.scss,.css,.ftl remove code in files types: ,.java,.js,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1126,5 +1126,5 @@
   margin-top: 70px;
   border-left-width: 52px;
   border-left-width: 60px;
-  border-left-width: 76px;
+  border-bottom-width: 3px;
 }
