--- a/content.scss
+++ b/content.scss
@@ -1126,5 +1126,5 @@
   margin-top: 70px;
   border-left-width: 52px;
   border-left-width: 60px;
-  border-bottom-width: 3px;
+  padding-bottom: 61px;
 }
