add code in files types: ,.java,.sql,.html,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.java,.sql,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1096,5 +1096,5 @@
   margin-top: 91px;
   border-left-width: 44px;
   padding-bottom: 25px;
-  border-top-width: 48px;
+  border-bottom-width: 5px;
 }
