add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1097,4 +1097,9 @@
   border-left-width: 44px;
   padding-bottom: 25px;
   border-bottom-width: 5px;
+  border-left-width: 83px;
+  margin-right: 59px;
+  padding-top: 20px;
+  margin-top: 50px;
+  padding-right: 98px;
 }
