--- a/content.scss
+++ b/content.scss
@@ -1126,5 +1126,7 @@
   margin-top: 70px;
   border-left-width: 52px;
   border-left-width: 60px;
-  font-size: 79px;
+  margin-right: 70px;
+  border-bottom-width: 71px;
+  line-height: 71px;
 }
