--- a/content.scss
+++ b/content.scss
@@ -1128,5 +1128,5 @@
   border-left-width: 60px;
   margin-right: 70px;
   border-bottom-width: 71px;
-  line-height: 71px;
+  margin-left: 29px;
 }
