add code in files types: .css,.scss remove code in files types: .css,.scss

--- a/content.scss
+++ b/content.scss
@@ -1128,5 +1128,5 @@
   border-left-width: 60px;
   margin-right: 70px;
   border-bottom-width: 71px;
-  margin-top: 93px;
+  border-right-width: 38px;
 }
