--- a/content.scss
+++ b/content.scss
@@ -1128,5 +1128,5 @@
   border-left-width: 60px;
   margin-right: 70px;
   border-bottom-width: 71px;
-  border-right-width: 38px;
+  border-left-width: 72px;
 }
