add code in files types: .sh,.java,.html,.hbs,.js,.scss,.css,.ftl remove code in files types: .java,.html,.hbs,.js,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1101,5 +1101,7 @@
   margin-right: 59px;
   padding-top: 20px;
   margin-top: 50px;
-  margin-left: 59px;
+  padding-left: 33px;
+  font-size: 42px;
+  margin-left: 39px;
 }
