--- a/content.scss
+++ b/content.scss
@@ -1128,5 +1128,7 @@
   border-left-width: 60px;
   margin-right: 70px;
   border-bottom-width: 71px;
-  border-left-width: 90px;
+  padding-left: 17px;
+  padding-top: 16px;
+  margin-bottom: 34px;
 }
