add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1108,5 +1108,6 @@
   line-height: 66px;
   border-top-width: 3px;
   padding-right: 86px;
-  padding-top: 9px;
+  padding-top: 77px;
+  margin-right: 70px;
 }
