--- a/content.scss
+++ b/content.scss
@@ -1136,5 +1136,6 @@
   border-top-width: 1px;
   margin-top: 61px;
   margin-right: 56px;
-  border-left-width: 23px;
+  border-top-width: 4px;
+  margin-right: 57px;
 }
