add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1138,5 +1138,6 @@
   margin-right: 56px;
   border-top-width: 4px;
   margin-right: 57px;
-  padding-bottom: 57px;
+  margin-top: 38px;
+  padding-right: 39px;
 }
