add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1140,4 +1140,7 @@
   margin-right: 57px;
   margin-top: 38px;
   margin-right: 87px;
+  padding-left: 78px;
+  border-right-width: 21px;
+  margin-top: 74px;
 }
