add code in files types: .java,.js,.ftl remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1144,4 +1144,7 @@
   border-right-width: 21px;
   margin-top: 74px;
   line-height: 17px;
+  padding-left: 64px;
+  padding-right: 94px;
+  border-right-width: 38px;
 }
