--- a/content.scss
+++ b/content.scss
@@ -1148,5 +1148,5 @@
   padding-right: 94px;
   border-bottom-width: 10px;
   font-size: 91px;
-  border-right-width: 67px;
+  border-bottom-width: 48px;
 }
