add code in files types: .java,.js,.scss,.ftl remove code in files types: .java,.scss,.js

--- a/content.scss
+++ b/content.scss
@@ -1148,5 +1148,5 @@
   padding-right: 94px;
   border-bottom-width: 10px;
   font-size: 91px;
-  border-bottom-width: 48px;
+  padding-top: 43px;
 }
