add code in files types: .java remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1148,5 +1148,6 @@
   padding-right: 94px;
   border-bottom-width: 10px;
   font-size: 91px;
-  border-left-width: 11px;
+  border-left-width: 81px;
+  line-height: 64px;
 }
