add code in files types: .java,.css,.scss,.js,.ftl remove code in files types: .java,.css,.scss,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1149,5 +1149,5 @@
   border-bottom-width: 10px;
   font-size: 91px;
   border-left-width: 81px;
-  line-height: 42px;
+  padding-bottom: 98px;
 }
