--- a/content.scss
+++ b/content.scss
@@ -1149,5 +1149,5 @@
   border-bottom-width: 10px;
   font-size: 91px;
   border-left-width: 81px;
-  padding-bottom: 98px;
+  border-bottom-width: 83px;
 }
