--- a/content.css
+++ b/content.css
@@ -1111,5 +1111,9 @@
   padding-top: 77px;
   margin-right: 70px;
   padding-right: 41px;
-  padding-top: 87px;
+  border-bottom-width: 1px;
+  border-right-width: 4px;
+  border-left-width: 70px;
+  margin-top: 12px;
+  margin-bottom: 78px;
 }
