add code in files types: .ftl remove code in files types: .ftl

--- a/content.scss
+++ b/content.scss
@@ -1147,7 +1147,5 @@
   padding-left: 64px;
   padding-right: 94px;
   border-bottom-width: 10px;
-  font-size: 91px;
-  border-left-width: 81px;
-  border-left-width: 18px;
+  border-top-width: 95px;
 }
