--- a/content.scss
+++ b/content.scss
@@ -1147,5 +1147,5 @@
   padding-left: 64px;
   padding-right: 94px;
   border-bottom-width: 10px;
-  border-top-width: 95px;
+  border-bottom-width: 4px;
 }
