add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1147,5 +1147,5 @@
   padding-left: 64px;
   padding-right: 94px;
   border-bottom-width: 10px;
-  border-top-width: 53px;
+  border-bottom-width: 87px;
 }
