add code in files types: .java,.ftl remove code in files types: .ftl

--- a/content.scss
+++ b/content.scss
@@ -1149,5 +1149,6 @@
   border-bottom-width: 10px;
   border-bottom-width: 87px;
   border-right-width: 27px;
-  margin-top: 87px;
+  margin-right: 99px;
+  padding-top: 2px;
 }
