--- a/content.css
+++ b/content.css
@@ -1118,5 +1118,7 @@
   margin-bottom: 78px;
   margin-top: 39px;
   padding-top: 26px;
-  font-size: 97px;
+  font-size: 30px;
+  margin-right: 34px;
+  margin-left: 41px;
 }
