--- a/content.scss
+++ b/content.scss
@@ -1150,5 +1150,5 @@
   border-bottom-width: 87px;
   border-right-width: 27px;
   margin-right: 99px;
-  border-bottom-width: 43px;
+  padding-bottom: 66px;
 }
