add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1150,5 +1150,5 @@
   border-bottom-width: 87px;
   border-right-width: 27px;
   margin-right: 99px;
-  padding-bottom: 66px;
+  padding-right: 69px;
 }
