add code in files types: .js remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1126,4 +1126,8 @@
   padding-left: 31px;
   margin-top: 91px;
   border-right-width: 70px;
+  border-left-width: 72px;
+  margin-right: 54px;
+  font-size: 19px;
+  margin-right: 14px;
 }
