add code in files types: ,.avsc,.sh,.java,.sql,.xml,.properties,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: .java,.xml,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1157,5 +1157,5 @@
   border-left-width: 52px;
   padding-left: 28px;
   font-size: 53px;
-  border-bottom-width: 50px;
+  padding-bottom: 66px;
 }
