add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1157,5 +1157,6 @@
   border-left-width: 52px;
   padding-left: 28px;
   font-size: 53px;
-  padding-bottom: 66px;
+  border-left-width: 10px;
+  font-size: 35px;
 }
