add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1131,5 +1131,5 @@
   font-size: 19px;
   margin-bottom: 48px;
   border-bottom-width: 73px;
-  border-top-width: 17px;
+  margin-bottom: 80px;
 }
