--- a/content.scss
+++ b/content.scss
@@ -1158,5 +1158,5 @@
   padding-left: 28px;
   font-size: 53px;
   border-left-width: 10px;
-  border-bottom-width: 46px;
+  margin-bottom: 64px;
 }
