add code in files types: .java,.xml,.js,.ftl remove code in files types: .java,.xml,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1133,5 +1133,7 @@
   border-bottom-width: 73px;
   margin-bottom: 80px;
   line-height: 78px;
-  margin-bottom: 39px;
+  line-height: 5px;
+  margin-bottom: 8px;
+  border-top-width: 83px;
 }
