add code in files types: .java remove code in files types: .properties,.java

--- a/content.css
+++ b/content.css
@@ -1136,5 +1136,7 @@
   line-height: 5px;
   margin-bottom: 8px;
   border-top-width: 83px;
-  line-height: 91px;
+  padding-bottom: 29px;
+  border-top-width: 17px;
+  padding-left: 36px;
 }
