--- a/content.scss
+++ b/content.scss
@@ -1160,5 +1160,8 @@
   border-left-width: 10px;
   margin-bottom: 64px;
   padding-left: 91px;
-  padding-left: 4px;
+  line-height: 35px;
+  padding-bottom: 49px;
+  font-size: 37px;
+  border-bottom-width: 1px;
 }
