add code in files types: .java,.js,.hbs,.scss,.css,.ftl remove code in files types: .java,.js,.hbs,.scss,.css,.ftl

--- a/content.css
+++ b/content.css
@@ -1139,5 +1139,5 @@
   padding-bottom: 29px;
   border-top-width: 17px;
   padding-left: 36px;
-  border-right-width: 69px;
+  padding-bottom: 15px;
 }
