add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1139,5 +1139,7 @@
   padding-bottom: 29px;
   border-top-width: 17px;
   padding-left: 36px;
-  margin-top: 92px;
+  padding-left: 1px;
+  margin-right: 18px;
+  line-height: 8px;
 }
