--- a/content.scss
+++ b/content.scss
@@ -1164,5 +1164,8 @@
   padding-bottom: 49px;
   font-size: 37px;
   border-bottom-width: 1px;
-  border-bottom-width: 43px;
+  border-bottom-width: 93px;
+  margin-left: 86px;
+  padding-top: 97px;
+  padding-left: 48px;
 }
