add code in files types: .css,.scss,.js,.ftl remove code in files types: .css,.scss,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1167,5 +1167,14 @@
   border-bottom-width: 93px;
   margin-left: 86px;
   padding-top: 97px;
-  margin-bottom: 72px;
+  border-bottom-width: 9px;
+  border-right-width: 0px;
+  font-size: 27px;
+  margin-left: 28px;
+  border-left-width: 0px;
+  border-bottom-width: 50px;
+  border-bottom-width: 20px;
+  padding-left: 61px;
+  border-right-width: 84px;
+  padding-top: 28px;
 }
