--- a/content.css
+++ b/content.css
@@ -1141,5 +1141,13 @@
   padding-left: 36px;
   padding-left: 1px;
   margin-right: 18px;
-  padding-left: 15px;
+  border-left-width: 21px;
+  line-height: 35px;
+  padding-left: 77px;
+  margin-left: 3px;
+  margin-right: 31px;
+  margin-top: 86px;
+  border-right-width: 84px;
+  padding-right: 30px;
+  padding-bottom: 12px;
 }
