--- a/content.scss
+++ b/content.scss
@@ -1176,5 +1176,5 @@
   border-bottom-width: 20px;
   padding-left: 61px;
   border-right-width: 84px;
-  line-height: 74px;
+  margin-bottom: 47px;
 }
