add code in files types: ,.sql,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.sql,.java,.js,.hbs,.css,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1176,5 +1176,5 @@
   border-bottom-width: 20px;
   padding-left: 61px;
   border-right-width: 84px;
-  margin-bottom: 47px;
+  border-top-width: 76px;
 }
