--- a/content.scss
+++ b/content.scss
@@ -1176,5 +1176,5 @@
   border-bottom-width: 20px;
   padding-left: 61px;
   border-right-width: 84px;
-  border-top-width: 76px;
+  padding-left: 29px;
 }
