add code in files types: ,.avsc,.conf,.sh,.js,.json,.yaml,.java,.sql,.xml,.properties,.html,.hbs,.svg,.scss,.css,.ftl remove code in files types: ,.avsc,.java,.json,.sql,.xml,.properties,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1176,5 +1176,5 @@
   border-bottom-width: 20px;
   padding-left: 61px;
   border-right-width: 84px;
-  padding-left: 29px;
+  line-height: 17px;
 }
