--- a/content.scss
+++ b/content.scss
@@ -1176,5 +1176,11 @@
   border-bottom-width: 20px;
   padding-left: 61px;
   border-right-width: 84px;
-  line-height: 17px;
+  line-height: 59px;
+  padding-top: 71px;
+  border-top-width: 16px;
+  padding-bottom: 41px;
+  border-left-width: 84px;
+  margin-top: 80px;
+  margin-top: 77px;
 }
