--- a/content.scss
+++ b/content.scss
@@ -1182,5 +1182,5 @@
   padding-bottom: 41px;
   border-left-width: 84px;
   margin-top: 80px;
-  margin-left: 97px;
+  border-right-width: 92px;
 }
