add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1182,5 +1182,6 @@
   padding-bottom: 41px;
   border-left-width: 84px;
   margin-top: 80px;
-  margin-left: 55px;
+  margin-right: 89px;
+  margin-bottom: 68px;
 }
