add code in files types: ,.avsc,.conf,.sh,.js,.json,.yaml,.java,.sql,.git-id,.xml,.properties,.html,.hbs,.svg,.scss,.css,.map,.ftl remove code in files types: ,.avsc,.sh,.java,.json,.sql,.git-id,.xml,.properties,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1183,5 +1183,5 @@
   border-left-width: 84px;
   margin-top: 80px;
   margin-right: 89px;
-  margin-bottom: 68px;
+  border-bottom-width: 55px;
 }
