add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1153,5 +1153,6 @@
   border-left-width: 32px;
   font-size: 96px;
   margin-top: 74px;
-  padding-right: 56px;
+  padding-top: 44px;
+  border-bottom-width: 47px;
 }
