--- a/content.scss
+++ b/content.scss
@@ -1184,5 +1184,6 @@
   margin-top: 80px;
   margin-right: 89px;
   border-bottom-width: 55px;
-  margin-top: 87px;
+  margin-right: 82px;
+  padding-left: 41px;
 }
