--- a/content.scss
+++ b/content.scss
@@ -1185,5 +1185,5 @@
   margin-right: 89px;
   border-bottom-width: 55px;
   margin-right: 82px;
-  padding-left: 41px;
+  border-left-width: 45px;
 }
