--- a/content.scss
+++ b/content.scss
@@ -1185,5 +1185,5 @@
   margin-right: 89px;
   border-bottom-width: 55px;
   margin-right: 82px;
-  border-right-width: 23px;
+  padding-left: 4px;
 }
