add code in files types: .conf,.sql,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: .conf,.sql,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1185,5 +1185,5 @@
   margin-right: 89px;
   border-bottom-width: 55px;
   margin-right: 82px;
-  border-top-width: 38px;
+  padding-bottom: 91px;
 }
