add code in files types: .java,.hbs,.js,.scss,.css,.ftl remove code in files types: .java,.hbs,.js,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1185,5 +1185,5 @@
   margin-right: 89px;
   border-bottom-width: 55px;
   margin-right: 82px;
-  padding-bottom: 91px;
+  border-bottom-width: 6px;
 }
