add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1154,5 +1154,6 @@
   font-size: 96px;
   margin-top: 74px;
   padding-top: 44px;
-  margin-top: 37px;
+  padding-left: 90px;
+  padding-top: 16px;
 }
