--- a/content.scss
+++ b/content.scss
@@ -1186,5 +1186,5 @@
   border-bottom-width: 55px;
   margin-right: 82px;
   border-bottom-width: 6px;
-  margin-bottom: 76px;
+  padding-right: 72px;
 }
