add code in files types: .sql,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: .sql,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1186,5 +1186,5 @@
   border-bottom-width: 55px;
   margin-right: 82px;
   border-bottom-width: 6px;
-  padding-right: 72px;
+  border-top-width: 45px;
 }
