add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1156,5 +1156,7 @@
   padding-top: 44px;
   padding-left: 90px;
   line-height: 3px;
-  margin-top: 13px;
+  margin-right: 94px;
+  padding-top: 32px;
+  margin-bottom: 39px;
 }
