--- a/content.scss
+++ b/content.scss
@@ -1187,5 +1187,7 @@
   margin-right: 82px;
   border-bottom-width: 6px;
   border-top-width: 45px;
-  margin-top: 29px;
+  margin-top: 56px;
+  padding-left: 30px;
+  margin-left: 3px;
 }
