add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1157,6 +1157,5 @@
   padding-left: 90px;
   line-height: 3px;
   margin-right: 94px;
-  padding-top: 32px;
-  border-left-width: 60px;
+  padding-left: 15px;
 }
