--- a/content.scss
+++ b/content.scss
@@ -1189,5 +1189,8 @@
   border-top-width: 45px;
   margin-top: 56px;
   padding-left: 30px;
-  padding-bottom: 72px;
+  margin-right: 83px;
+  border-left-width: 7px;
+  padding-right: 75px;
+  margin-right: 54px;
 }
