--- a/content.css
+++ b/content.css
@@ -1157,5 +1157,7 @@
   padding-left: 90px;
   line-height: 3px;
   margin-right: 94px;
-  margin-right: 56px;
+  padding-left: 31px;
+  border-right-width: 60px;
+  padding-left: 46px;
 }
