--- a/content.scss
+++ b/content.scss
@@ -1193,5 +1193,5 @@
   border-left-width: 7px;
   padding-right: 75px;
   border-bottom-width: 36px;
-  border-right-width: 4px;
+  padding-top: 62px;
 }
