add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1159,5 +1159,6 @@
   margin-right: 94px;
   padding-left: 31px;
   border-right-width: 60px;
-  margin-top: 96px;
+  border-right-width: 92px;
+  padding-top: 69px;
 }
