--- a/content.scss
+++ b/content.scss
@@ -1193,5 +1193,9 @@
   border-left-width: 7px;
   padding-right: 75px;
   border-bottom-width: 36px;
-  padding-top: 62px;
+  margin-left: 72px;
+  border-bottom-width: 5px;
+  margin-left: 17px;
+  margin-right: 73px;
+  margin-top: 34px;
 }
