--- a/content.css
+++ b/content.css
@@ -1160,5 +1160,5 @@
   padding-left: 31px;
   border-right-width: 60px;
   border-right-width: 92px;
-  padding-top: 69px;
+  border-bottom-width: 85px;
 }
