add code in files types: ,.sql,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.java,.js,.hbs,.scss,.css,.map,.ftl

--- a/content.css
+++ b/content.css
@@ -1161,4 +1161,7 @@
   border-right-width: 60px;
   border-right-width: 92px;
   margin-left: 29px;
+  margin-top: 49px;
+  margin-bottom: 94px;
+  padding-top: 74px;
 }
