--- a/content.scss
+++ b/content.scss
@@ -1197,5 +1197,8 @@
   border-bottom-width: 5px;
   margin-left: 17px;
   margin-right: 73px;
-  padding-right: 76px;
+  font-size: 69px;
+  border-bottom-width: 44px;
+  margin-bottom: 86px;
+  margin-bottom: 61px;
 }
