add code in files types: .java,.ftl remove code in files types: .ftl

--- a/content.css
+++ b/content.css
@@ -1165,5 +1165,6 @@
   margin-bottom: 94px;
   padding-top: 74px;
   font-size: 53px;
-  padding-top: 56px;
+  margin-left: 36px;
+  line-height: 58px;
 }
