--- a/content.scss
+++ b/content.scss
@@ -1201,5 +1201,5 @@
   border-bottom-width: 44px;
   margin-bottom: 86px;
   margin-bottom: 61px;
-  margin-right: 0px;
+  border-right-width: 16px;
 }
