add code in files types: .scss,.css remove code in files types: .scss,.css

--- a/content.scss
+++ b/content.scss
@@ -1201,5 +1201,5 @@
   border-bottom-width: 44px;
   margin-bottom: 86px;
   margin-bottom: 61px;
-  border-right-width: 16px;
+  padding-bottom: 65px;
 }
