--- a/content.scss
+++ b/content.scss
@@ -1201,5 +1201,5 @@
   border-bottom-width: 44px;
   margin-bottom: 86px;
   margin-bottom: 61px;
-  padding-bottom: 65px;
+  padding-right: 52px;
 }
