add code in files types: ,.avsc,.sh,.json,.sql,.java,.properties,.html,.js,.hbs,.scss,.css,.svg,.ftl,.xml remove code in files types: ,.avsc,.sh,.sql,.java,.html,.js,.hbs,.scss,.css,.map,.ftl,.xml

--- a/content.scss
+++ b/content.scss
@@ -1201,5 +1201,5 @@
   border-bottom-width: 44px;
   margin-bottom: 86px;
   margin-bottom: 61px;
-  padding-right: 52px;
+  border-bottom-width: 12px;
 }
