add code in files types: .java,.hbs,.js,.scss,.css,.ftl remove code in files types: .java,.hbs,.js,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1201,5 +1201,5 @@
   border-bottom-width: 44px;
   margin-bottom: 86px;
   margin-bottom: 61px;
-  border-bottom-width: 12px;
+  border-left-width: 22px;
 }
