add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1200,6 +1200,5 @@
   font-size: 69px;
   border-bottom-width: 44px;
   margin-bottom: 86px;
-  margin-bottom: 61px;
-  border-bottom-width: 54px;
+  margin-left: 75px;
 }
