add code in files types: .java,.css,.scss,.ftl remove code in files types: .java,.css,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1201,5 +1201,5 @@
   border-bottom-width: 44px;
   margin-bottom: 86px;
   margin-left: 75px;
-  margin-right: 11px;
+  border-right-width: 47px;
 }
