--- a/content.scss
+++ b/content.scss
@@ -1202,5 +1202,5 @@
   margin-bottom: 86px;
   margin-left: 75px;
   border-right-width: 47px;
-  font-size: 46px;
+  border-bottom-width: 86px;
 }
