add code in files types: .js,.ftl remove code in files types: .ftl

--- a/content.scss
+++ b/content.scss
@@ -1202,5 +1202,6 @@
   margin-bottom: 86px;
   margin-left: 75px;
   border-right-width: 47px;
-  border-bottom-width: 86px;
+  margin-left: 5px;
+  border-top-width: 4px;
 }
