--- a/content.scss
+++ b/content.scss
@@ -1204,5 +1204,5 @@
   border-right-width: 47px;
   margin-left: 5px;
   border-top-width: 4px;
-  border-bottom-width: 59px;
+  padding-left: 7px;
 }
