add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1167,5 +1167,8 @@
   font-size: 53px;
   margin-left: 36px;
   font-size: 28px;
-  border-bottom-width: 35px;
+  font-size: 24px;
+  line-height: 69px;
+  padding-bottom: 82px;
+  margin-right: 19px;
 }
