--- a/content.scss
+++ b/content.scss
@@ -1207,4 +1207,8 @@
   border-left-width: 69px;
   padding-bottom: 43px;
   padding-left: 92px;
+  padding-top: 90px;
+  padding-bottom: 40px;
+  line-height: 63px;
+  border-left-width: 31px;
 }
