add code in files types: .sql,.sh,.xml,.java,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: .sh,.xml,.java,.js,.hbs,.css,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1210,5 +1210,7 @@
   padding-top: 90px;
   padding-bottom: 40px;
   line-height: 63px;
-  border-bottom-width: 26px;
+  margin-left: 31px;
+  line-height: 97px;
+  font-size: 39px;
 }
