--- a/content.css
+++ b/content.css
@@ -1170,5 +1170,7 @@
   font-size: 24px;
   line-height: 69px;
   padding-bottom: 82px;
-  padding-right: 17px;
+  padding-right: 56px;
+  border-bottom-width: 84px;
+  border-bottom-width: 11px;
 }
