add code in files types: .java,.scss,.css,.js,.ftl,.hbs remove code in files types: .java,.scss,.css,.js,.ftl,.hbs

--- a/content.css
+++ b/content.css
@@ -1172,5 +1172,5 @@
   padding-bottom: 82px;
   padding-right: 56px;
   border-bottom-width: 84px;
-  border-bottom-width: 11px;
+  border-top-width: 99px;
 }
