add code in files types: ,.sql,.java,.ftl remove code in files types: ,.sql,.java

--- a/content.scss
+++ b/content.scss
@@ -1215,5 +1215,8 @@
   margin-top: 3px;
   margin-left: 75px;
   border-left-width: 59px;
-  margin-left: 29px;
+  border-right-width: 28px;
+  padding-right: 96px;
+  line-height: 66px;
+  font-size: 56px;
 }
