--- a/content.css
+++ b/content.css
@@ -1175,5 +1175,5 @@
   border-top-width: 99px;
   padding-bottom: 57px;
   padding-top: 56px;
-  border-bottom-width: 7px;
+  margin-bottom: 85px;
 }
