--- a/content.scss
+++ b/content.scss
@@ -1224,5 +1224,5 @@
   border-top-width: 0px;
   padding-top: 48px;
   border-left-width: 28px;
-  padding-bottom: 86px;
+  border-right-width: 22px;
 }
