add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1224,5 +1224,5 @@
   border-top-width: 0px;
   padding-top: 48px;
   border-left-width: 28px;
-  border-right-width: 22px;
+  padding-top: 63px;
 }
