add code in files types: ,.avsc,.sql,.java,.js,.hbs,.scss,.css,.ftl remove code in files types: ,.sql,.java,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1224,5 +1224,5 @@
   border-top-width: 0px;
   padding-top: 48px;
   border-left-width: 28px;
-  padding-top: 63px;
+  border-top-width: 89px;
 }
