add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1175,5 +1175,7 @@
   border-top-width: 99px;
   padding-bottom: 57px;
   padding-top: 56px;
-  margin-top: 95px;
+  border-left-width: 56px;
+  border-top-width: 81px;
+  border-left-width: 5px;
 }
