--- a/content.scss
+++ b/content.scss
@@ -1224,5 +1224,7 @@
   border-top-width: 0px;
   padding-top: 48px;
   border-left-width: 28px;
-  border-top-width: 89px;
+  line-height: 22px;
+  border-bottom-width: 5px;
+  padding-right: 27px;
 }
