add code in files types: .hbs,.scss,.css,.js,.ftl remove code in files types: .css,.scss,.js,.ftl

--- a/content.css
+++ b/content.css
@@ -1177,5 +1177,5 @@
   padding-top: 56px;
   border-left-width: 56px;
   border-top-width: 81px;
-  border-left-width: 5px;
+  margin-left: 88px;
 }
