add code in files types: .java remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1177,5 +1177,8 @@
   padding-top: 56px;
   border-left-width: 56px;
   border-top-width: 81px;
-  padding-left: 16px;
+  border-left-width: 35px;
+  border-right-width: 44px;
+  padding-top: 44px;
+  padding-right: 24px;
 }
