--- a/content.scss
+++ b/content.scss
@@ -1226,5 +1226,8 @@
   border-left-width: 28px;
   line-height: 22px;
   border-bottom-width: 5px;
-  margin-top: 36px;
+  font-size: 37px;
+  padding-bottom: 74px;
+  margin-top: 54px;
+  font-size: 25px;
 }
