add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1230,4 +1230,7 @@
   padding-bottom: 74px;
   margin-top: 54px;
   margin-left: 96px;
+  border-left-width: 43px;
+  border-left-width: 89px;
+  line-height: 20px;
 }
