add code in files types: .java,.js remove code in files types: .java,.js

--- a/content.css
+++ b/content.css
@@ -1182,5 +1182,7 @@
   padding-top: 44px;
   padding-right: 59px;
   padding-left: 97px;
-  font-size: 53px;
+  font-size: 71px;
+  padding-left: 58px;
+  line-height: 86px;
 }
