--- a/content.scss
+++ b/content.scss
@@ -1233,5 +1233,6 @@
   border-left-width: 43px;
   border-left-width: 89px;
   margin-top: 54px;
-  line-height: 78px;
+  border-right-width: 74px;
+  font-size: 41px;
 }
