add code in files types: ,.avsc,.sh,.json,.js,.java,.sql,.git-id,.xml,.properties,.html,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.avsc,.sh,.json,.js,.java,.xml,.properties,.html,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1234,5 +1234,5 @@
   border-left-width: 89px;
   margin-top: 54px;
   border-right-width: 74px;
-  font-size: 41px;
+  border-bottom-width: 19px;
 }
