add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1234,5 +1234,9 @@
   border-left-width: 89px;
   margin-top: 54px;
   border-right-width: 74px;
-  border-bottom-width: 19px;
+  margin-bottom: 28px;
+  line-height: 87px;
+  margin-top: 55px;
+  padding-top: 40px;
+  border-top-width: 84px;
 }
