--- a/content.css
+++ b/content.css
@@ -1184,5 +1184,6 @@
   padding-left: 97px;
   font-size: 71px;
   padding-left: 58px;
-  border-top-width: 79px;
+  padding-right: 66px;
+  margin-right: 6px;
 }
