add code in files types: .java remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1185,5 +1185,8 @@
   font-size: 71px;
   padding-left: 58px;
   padding-right: 66px;
-  border-left-width: 24px;
+  margin-right: 22px;
+  line-height: 95px;
+  margin-left: 26px;
+  font-size: 61px;
 }
