--- a/content.scss
+++ b/content.scss
@@ -1240,4 +1240,11 @@
   padding-top: 40px;
   line-height: 2px;
   padding-top: 41px;
+  line-height: 38px;
+  padding-top: 62px;
+  border-bottom-width: 92px;
+  border-top-width: 55px;
+  padding-right: 28px;
+  padding-bottom: 2px;
+  border-left-width: 34px;
 }
