add code in files types: .hbs,.js remove code in files types: .hbs,.js

--- a/content.css
+++ b/content.css
@@ -1189,5 +1189,7 @@
   line-height: 95px;
   margin-left: 26px;
   margin-left: 36px;
-  border-bottom-width: 3px;
+  padding-left: 77px;
+  font-size: 63px;
+  font-size: 63px;
 }
