--- a/content.scss
+++ b/content.scss
@@ -1249,5 +1249,8 @@
   border-left-width: 34px;
   border-bottom-width: 91px;
   margin-left: 17px;
-  border-bottom-width: 17px;
+  padding-left: 71px;
+  margin-top: 73px;
+  border-left-width: 98px;
+  font-size: 87px;
 }
