add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1193,5 +1193,7 @@
   font-size: 63px;
   margin-right: 87px;
   border-bottom-width: 83px;
-  margin-bottom: 32px;
+  border-left-width: 93px;
+  margin-top: 24px;
+  border-top-width: 62px;
 }
