--- a/content.scss
+++ b/content.scss
@@ -1255,5 +1255,7 @@
   padding-right: 58px;
   margin-bottom: 39px;
   margin-left: 6px;
-  margin-left: 60px;
+  margin-left: 65px;
+  margin-bottom: 14px;
+  line-height: 70px;
 }
