add code in files types: .scss,.css remove code in files types: .css

--- a/content.css
+++ b/content.css
@@ -1195,5 +1195,5 @@
   border-bottom-width: 83px;
   border-left-width: 93px;
   margin-top: 24px;
-  border-top-width: 62px;
+  border-bottom-width: 13px;
 }
